# services/activity-service/src/generated/java/io/todorok/activity/api/model/DetailFormat.java
@@ -1,0 +1,55 @@
+package io.todorok.activity.api.model;
+
+import java.net.URI;
+import java.util.Objects;
+import com.fasterxml.jackson.annotation.JsonValue;
+import java.time.OffsetDateTime;
+import jakarta.validation.Valid;
+import jakarta.validation.constraints.*;
+
+
+import java.util.*;
+import jakarta.annotation.Generated;
+
+import com.fasterxml.jackson.annotation.JsonCreator;
+import com.fasterxml.jackson.annotation.JsonValue;
+
+/**
+ * Gets or Sets DetailFormat
+ */
+
+@Generated(value = "org.openapitools.codegen.languages.SpringCodegen", comments = "Generator version: 7.24.0")
+public enum DetailFormat {
+
+  LEGACY("LEGACY"),
+
+  STANDARD("STANDARD"),
+
+  TEMPLATE("TEMPLATE");
+
+  private final String value;
+
+  DetailFormat(String value) {
+    this.value = value;
+  }
+
+  @JsonValue
+  public String getValue() {
+    return value;
+  }
+
+  @Override
+  public String toString() {
+    return String.valueOf(value);
+  }
+
+  @JsonCreator
+  public static DetailFormat fromValue(String value) {
+    for (DetailFormat b : DetailFormat.values()) {
+      if (b.value.equals(value)) {
+        return b;
+      }
+    }
+    throw new IllegalArgumentException("Unexpected value '" + value + "'");
+  }
+}
